--- a/class.html
+++ b/class.html
@@ -12,7 +12,7 @@
  <li>Phone Number-9433XXXXXX</li>
  <li>Email ID-sagnik.chatterjee2024@vitstudent.ac.in</li>
  <li>Address-23, Lakeview Road, Kolkata – 700029, West Bengal, India</li>
- <font size="6"><b><button></button><a href="index.html">Home Page</a></b></font></font><button>
+ <font size="6"><b><button><a href="index.html">Home Page</a></b></font></font><button>
 <br>
  <font size="6"><b><button><a href="file.html">Projects Page</a></b></font></button>
 </pre>
@@ -20,4 +20,5 @@
 </html>
 
  
+
 
