--- a/registration.html
+++ b/registration.html
@@ -33,11 +33,11 @@
 </div>
 <div>
 <label for="gender">Female</label>
-<input name="food" id="gender" type="radio" value="Female">
+<input name="gender" id="gender" type="radio" value="Female">
 </div>
 <div>
 <label for="gender">Trans</label>
-<input name="food" id="gender" type="radio" value="Trans">
+<input name="gender" id="gender" type="radio" value="Trans">
 </div>
 <h3>State Name</h3>
 <div>
@@ -63,4 +63,5 @@
 </div>
 </form>
 </body>
+
 </html>
